# rootsignal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  dev.sh  docker-compose.yml  entrypoint.sh  package.json  pnpm-lock.yaml
crates/taproot-server/: Cargo.toml
crates/taproot-server/src/: main.rs  routes.rs
dev/cli/: Cargo.toml
dev/cli/src/: main.rs
modules/ai-client/: Cargo.toml
modules/ai-client/src/: circuit_breaker.rs  fallback.rs  lib.rs  tool.rs  traits.rs  util.rs
modules/rootsignal-admin/: Cargo.toml
modules/rootsignal-admin/src/: main.rs  templates.rs
modules/rootsignal-admin/templates/: base.html
modules/rootsignal-api/: Cargo.toml  README.md
modules/rootsignal-api/migrations/: 001_create_web_interactions.sql  005_post_metadata.sql  008_source_fetch_count.sql  011_validation_issues.sql  013_lint_event_columns.sql  015_node_event_indexes.sql  023_seesaw_store_tables.sql  030_seesaw_handler_descriptions.sql  031_deferred_scrapes.sql  033_budget_configs.sql  034_simplify_budget.sql
modules/rootsignal-api/src/: auth.rs  debug_context.rs  event_broadcast.rs  event_cache.rs  inspector_display.rs  inspector_read_model.rs  investigate.rs  investigate_tools.rs  jwt.rs  link_preview.rs  main.rs  pg_projector.rs  projection.rs  restate_client.rs  scout_runner.rs  templates.rs
modules/rootsignal-archive/: Cargo.toml
modules/rootsignal-archive/migrations/: 001_create_web_interactions.sql  003_rename_city_slug_to_region_slug.sql  004_content_type_tables.sql
modules/rootsignal-archive/src/: archive.rs  enrichment.rs  error.rs  fetch_request.rs  freshness.rs  lib.rs  links.rs  readability.rs  replay.rs  router.rs  seed.rs  semantics.rs  source_handle.rs  store.rs  text_extract.rs
modules/rootsignal-common/: Cargo.toml
modules/rootsignal-common/src/: annotations.rs  config.rs  describe.rs  error.rs  events.rs  lib.rs  quality.rs  safety.rs  system_events.rs  telemetry_events.rs  types.rs
modules/rootsignal-common/tests/: event_reducer_boundary_test.rs
modules/rootsignal-core/: Cargo.toml
modules/rootsignal-core/src/: config.rs  deps.rs  error.rs  file_config.rs  ingestor.rs  lib.rs  prompt_registry.rs  security.rs  template.rs  types.rs
modules/rootsignal-domains/: Cargo.toml
modules/rootsignal-domains/src/: heat_map.rs  lib.rs  query_helpers.rs
modules/rootsignal-editions/: Cargo.toml
modules/rootsignal-editions/src/: main.rs
modules/rootsignal-engine/: Cargo.toml
modules/rootsignal-engine/src/: engine.rs  lib.rs  persist.rs  traits.rs
modules/rootsignal-engine/tests/: engine_test.rs
modules/rootsignal-events/: Cargo.toml
modules/rootsignal-events/src/: lib.rs  snapshot_store.rs  store.rs  types.rs  upcasting.rs
modules/rootsignal-events/tests/: ergonomics_test.rs  snapshot_test.rs  store_test.rs
modules/rootsignal-graph/: Cargo.toml
modules/rootsignal-graph/src/: beacon.rs  cache.rs  cached_reader.rs  cause_heat.rs  client.rs  cluster.rs  edition.rs  embedding_enrichment.rs  embedding_store.rs  enrich.rs  geocoder.rs  lib.rs  migrate.rs  pipeline.rs  projector.rs  queries.rs  reader.rs  reducer.rs  response.rs  severity_inference.rs  similarity.rs  situation_temperature.rs  situation_weaver.rs  story_metrics.rs  story_weaver.rs  synthesizer.rs  testutil.rs  writer.rs
modules/rootsignal-graph/tests/: bbox_scoping_test.rs  cloud_connect.rs  embedding_store_test.rs  enrich_test.rs  litmus_test.rs  location_convergence_test.rs  pipeline_test.rs  projector_contract_test.rs  reducer_contract_test.rs  severity_inference_test.rs  source_region_test.rs  triangulation_test.rs
modules/rootsignal-migrate/: Cargo.toml
modules/rootsignal-migrate/migrations/: 002_add_semantics_column.sql  006_scout_runs.sql  007_unified_events.sql  009_scout_run_events.sql  010_drop_parent_id_fk.sql  012_url_scrape_stats.sql  014_event_summary_column.sql  016_event_uuid_columns.sql  017_aggregate_snapshots.sql  018_replay_checkpoints.sql  019_run_events_jsonb.sql  020_event_correlation_and_aggregate.sql  021_drop_scout_run_events.sql  022_add_handler_id.sql  023_seesaw_store_tables.sql  024_seesaw_cancellations.sql  025_scope_snapshots_by_correlation.sql  026_scout_runs_flow_columns.sql  027_fix_finished_at_nullable.sql  028_events_run_variant_index.sql  029_seesaw_handler_logs.sql  031_deferred_scrapes.sql  032_rename_scheduled_scrapes.sql  034_simplify_budget.sql  035_seesaw_026_schema.sql  036_backfill_sources_discovered.sql  037_events_correlation_seq_index.sql  039_rename_replay_pointer.sql  040_source_ids_gin_index.sql  041_rename_scout_runs_to_runs.sql  042_runs_workflow_columns.sql  043_schedules.sql  044_runs_busy_check_index.sql  045_schedule_backoff.sql
modules/rootsignal-migrate/src/: checks.rs  lib.rs  main.rs  registry.rs  runner.rs
modules/rootsignal-replay/: Cargo.toml
modules/rootsignal-replay/src/: main.rs
modules/rootsignal-scout/: Cargo.toml  README.md
modules/rootsignal-scout-supervisor/: Cargo.toml
modules/rootsignal-scout-supervisor/src/: budget.rs  issues.rs  lib.rs  main.rs  state.rs  supervisor.rs  types.rs
modules/rootsignal-scout/docs/: architecture.md  test-scenarios.md
modules/rootsignal-scout/src/: actor_extractor.rs  archive_bridge.rs  bootstrap.rs  budget.rs  curiosity.rs  discovery.rs  embedder.rs  expansion.rs  extractor.rs  fixtures.rs  gathering_finder.rs  gravity_scout.rs  investigator.rs  lib.rs  main.rs  metrics.rs  news_scanner.rs  quality.rs  response_finder.rs  response_scout.rs  run_log.rs  scheduler.rs  scout.rs  scrape_phase.rs  scraper.rs  source_finder.rs  sources.rs  tension_linker.rs  testing.rs  traits.rs
modules/rootsignal-scout/tests/: archive_replay_test.rs  conversion_test.rs  domain_filter_test.rs  evolution_test.rs  extraction_test.rs  firsthand_filter_test.rs  graph_write_test.rs  investigation_triage_test.rs  quality_scenarios_test.rs  (+3 more)
modules/rootsignal-server/: Cargo.toml
modules/rootsignal-web/: Cargo.toml
modules/rootsignal-world/: Cargo.toml  README.md
modules/taproot-core/: Cargo.toml
(+1192 files in other folders)
