[workspace]
members = [
    "modules/ai-client",
    "modules/apify-client",
    "modules/twilio-rs",
    "modules/rootsignal-common",
    "modules/rootsignal-events",
    "modules/rootsignal-graph",
    "modules/browserless-client",
    "modules/rootsignal-scout",
    "modules/rootsignal-scout-supervisor",
    "modules/rootsignal-api",
    "modules/simweb",
    "modules/rootsignal-archive",
    "modules/rootsignal-world",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Neo4j (bolt protocol driver)
neo4rs = "0.8"

# GraphQL
async-graphql = { version = "7", features = ["chrono", "uuid", "dataloader"] }
async-graphql-axum = "7"

# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "set-header", "cors"] }
tower = "0.5"

# Web scraping
spider_transformations = "2"

# RSS/Atom feed parsing
feed-rs = "2"

# Geohash (spatial bucketing)
geohash = "0.13"

# Recurrence rules (RFC 5545)
rrule = "0.14"

# Regex (PII detection)
regex = "1"

# Database (Postgres)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Builder pattern
typed-builder = "0.20"

# Durable workflows
restate-sdk = "0.4.0"
bytes = "1"

# Testing
testcontainers = "0.23"

# Event sourcing
seesaw_core = "0.12.1"
seesaw-postgres = "0.12.1"
seesaw-memory = "0.12.1"

# Local crates
ai-client = { path = "modules/ai-client" }
apify-client = { path = "modules/apify-client" }
browserless-client = { path = "modules/browserless-client" }
twilio = { path = "modules/twilio-rs" }
rootsignal-common = { path = "modules/rootsignal-common" }
rootsignal-world = { path = "modules/rootsignal-world" }
rootsignal-events = { path = "modules/rootsignal-events" }
rootsignal-graph = { path = "modules/rootsignal-graph" }
rootsignal-archive = { path = "modules/rootsignal-archive" }
simweb = { path = "modules/simweb" }
