[package]
name = "taproot-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "taproot-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
pgvector.workspace = true
restate-sdk.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
thiserror.workspace = true
base64 = "0.22"
dotenvy.workspace = true
ai-client.workspace = true
taproot-core.workspace = true
taproot-domains.workspace = true
