[workspace]

[package]
name = "dev-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dev-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
anyhow = "1"
console = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
