[package]
name = "ai-client"
version = "0.1.0"
edition = "2021"
description = "Provider-agnostic AI client with OpenAI and OpenRouter support"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
anyhow = "1.0"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
