[package]
name = "rootsignal-admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "admin"
path = "src/main.rs"

[dependencies]
rootsignal-common = { workspace = true }
rootsignal-graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
dioxus = { version = "0.6", features = ["ssr"] }
