[package]
name = "rootsignal-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
rootsignal-common = { workspace = true }
rootsignal-graph = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
rootsignal-scout = { path = "../rootsignal-scout" }
rootsignal-archive = { workspace = true }
sqlx = { workspace = true }
rootsignal-scout-supervisor = { path = "../rootsignal-scout-supervisor" }
twilio = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = "9"
sha2 = "0.10"
hex = "0.4"
url = "2"
regex = { workspace = true }
