[package]
name = "rootsignal-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
sqlx.workspace = true
pgvector.workspace = true
dotenvy.workspace = true
toml.workspace = true
url.workspace = true
ipnet.workspace = true
regex.workspace = true
ai-client.workspace = true
