[package]
name = "rootsignal-editions"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "editions"
path = "src/main.rs"

[dependencies]
rootsignal-common = { workspace = true }
rootsignal-graph = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
