[package]
name = "rootsignal-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rootsignal-events = { path = "../rootsignal-events" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
