[package]
name = "rootsignal-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rootsignal-common = { workspace = true }
ai-client = { workspace = true }
neo4rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
schemars = { workspace = true }
url = "2"
