[package]
name = "rootsignal-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rootsignal-migrate"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde_json.workspace = true
uuid.workspace = true
sha2 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
rootsignal-common = { workspace = true }
rootsignal-world = { workspace = true }
rootsignal-graph = { workspace = true }
