[package]
name = "rootsignal-replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "replay"
path = "src/main.rs"

[dependencies]
rootsignal-common = { workspace = true }
rootsignal-events = { workspace = true }
rootsignal-graph = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
