[package]
name = "rootsignal-scout-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "supervisor"
path = "src/main.rs"

[dependencies]
rootsignal-common = { workspace = true }
rootsignal-graph = { workspace = true }
ai-client = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
neo4rs = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
rootsignal-graph = { workspace = true, features = ["test-utils"] }
