[package]
name = "rootsignal-scout"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "scout"
path = "src/main.rs"

[[bin]]
name = "diagnose_reddit"
path = "src/bin/diagnose_reddit.rs"

[dependencies]
rootsignal-common = { workspace = true }
rootsignal-graph = { workspace = true }
rootsignal-archive = { workspace = true }
ai-client = { workspace = true }
apify-client = { workspace = true }
browserless-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
spider_transformations = { workspace = true }
feed-rs = { workspace = true }
sqlx = { workspace = true }
rootsignal-scout-supervisor = { path = "../rootsignal-scout-supervisor" }
restate-sdk = { workspace = true }
bytes = { workspace = true }
url = "2"
tempfile = "3"
rand = "0.9"
futures = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
rootsignal-graph = { workspace = true, features = ["test-utils"] }
simweb = { workspace = true }
testcontainers = { workspace = true }
