[package]
name = "rootsignal-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rootsignal-server"
path = "src/main.rs"

[[bin]]
name = "export-schema"
path = "src/bin/export_schema.rs"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
pgvector.workspace = true
restate-sdk.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
thiserror.workspace = true
base64 = "0.22"
jsonwebtoken.workspace = true
twilio.workspace = true
dotenvy.workspace = true
clap.workspace = true
ai-client.workspace = true
rootsignal-core.workspace = true
rootsignal-domains.workspace = true
