[package]
name = "rootsignal-world"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
seesaw_core = { workspace = true }
seesaw_core_macros = { workspace = true }
